--- a/spark/1.2.0.wso2v1/src/main/resources/reference.conf
+++ b/spark/1.2.0.wso2v1/src/main/resources/reference.conf
@@ -20,11 +20,11 @@ akka {
 
 
     serialization-bindings {
-      # Since com.google.protobuf.Message does not extend Serializable but
+      # Since org.spark_project.protobuf.Message does not extend Serializable but
       # GeneratedMessage does, need to use the more specific one here in order
       # to avoid ambiguity
-      "akka.actor.SelectionPath" = akka-containers
-      "com.google.protobuf_spark.GeneratedMessage" = proto
+      "akka.actor.ActorSelectionMessage" = akka-containers
+      "org.spark_project.protobuf.GeneratedMessage" = proto
       "akka.remote.DaemonMsgCreate" = daemon-create
     }
 
@@ -33,14 +33,14 @@ akka {
       default {
 
         # if this is set to a valid remote address, the named actor will be
-        # deployed at that node e.g. "akka://sys@host:port"
+        # deployed at that node e.g. "akka.tcp://sys@host:port"
         remote = ""
 
         target {
 
           # A list of hostnames and ports for instantiating the children of a
           # router
-          #   The format should be on "akka://sys@host:port", where:
+          #   The format should be on "akka.tcp://sys@host:port", where:
           #    - sys is the remote actor system name
           #    - hostname can be either hostname or IP address the remote actor
           #      should connect to
@@ -80,7 +80,7 @@ akka {
 
     # Controls the backoff interval after a refused write is reattempted.
     # (Transports may refuse writes if their internal buffer is full)
-    backoff-interval = 0.01 s
+    backoff-interval = 5 ms
 
     # Acknowledgment timeout of management commands sent to the transport stack.
     command-ack-timeout = 30 s
@@ -90,7 +90,7 @@ akka {
     # that since remoting can load arbitrary 3rd party drivers (see
     # "enabled-transport" and "adapters" entries) it is not guaranteed that
     # every module will respect this setting.
-    use-dispatcher = ""
+    use-dispatcher = "akka.remote.default-remote-dispatcher"
 
     ### Security settings
 
@@ -98,6 +98,12 @@ akka {
     # system messages to be send by clients, e.g. messages like 'Create',
     # 'Suspend', 'Resume', 'Terminate', 'Supervise', 'Link' etc.
     untrusted-mode = off
+    
+    # When 'untrusted-mode=on' inbound actor selections are by default discarded.
+    # Actors with paths defined in this white list are granted permission to receive actor
+    # selections messages. 
+    # E.g. trusted-selection-paths = ["/user/receptionist", "/user/namingService"]   
+    trusted-selection-paths = []
 
     # Should the remote server require that its peers share the same
     # secure-cookie (defined in the 'remote' section)? Secure cookies are passed
@@ -136,46 +142,33 @@ akka {
     # a value in bytes, such as 1000b. Note that for all messages larger than this
     # limit there will be extra performance and scalability cost.
     log-frame-size-exceeding = off
+    
+    # Log warning if the number of messages in the backoff buffer in the endpoint
+    # writer exceeds this limit. It can be disabled by setting the value to off.
+    log-buffer-size-exceeding = 50000
 
     ### Failure detection and recovery
 
-    # Settings for the Phi accrual failure detector (http://ddg.jaist.ac.jp/pub/HDY+04.pdf
-    # [Hayashibara et al]) used by the remoting subsystem to detect failed
-    # connections.
+    # Settings for the failure detector to monitor connections.
+    # For TCP it is not important to have fast failure detection, since
+    # most connection failures are captured by TCP itself. 
     transport-failure-detector {
 
       # FQCN of the failure detector implementation.
       # It must implement akka.remote.FailureDetector and have
       # a public constructor with a com.typesafe.config.Config and
       # akka.actor.EventStream parameter.
-      implementation-class = "akka.remote.PhiAccrualFailureDetector"
+      implementation-class = "akka.remote.DeadlineFailureDetector"
 
       # How often keep-alive heartbeat messages should be sent to each connection.
-      heartbeat-interval = 1 s
-
-      # Defines the failure detector threshold.
-      # A low threshold is prone to generate many wrong suspicions but ensures
-      # a quick detection in the event of a real crash. Conversely, a high
-      # threshold generates fewer mistakes but needs more time to detect
-      # actual crashes.
-      threshold = 7.0
-
-      # Number of the samples of inter-heartbeat arrival times to adaptively
-      # calculate the failure timeout for connections.
-      max-sample-size = 100
-
-      # Minimum standard deviation to use for the normal distribution in
-      # AccrualFailureDetector. Too low standard deviation might result in
-      # too much sensitivity for sudden, but normal, deviations in heartbeat
-      # inter arrival times.
-      min-std-deviation = 100 ms
+      heartbeat-interval = 4 s
 
       # Number of potentially lost/delayed heartbeats that will be
       # accepted before considering it to be an anomaly.
-      # This margin is important to be able to survive sudden, occasional,
-      # pauses in heartbeat arrivals, due to for example garbage collect or
+      # A margin to the `heartbeat-interval` is important to be able to survive sudden,
+      # occasional, pauses in heartbeat arrivals, due to for example garbage collect or
       # network drop.
-      acceptable-heartbeat-pause = 3 s
+      acceptable-heartbeat-pause = 20 s
     }
 
     # Settings for the Phi accrual failure detector (http://ddg.jaist.ac.jp/pub/HDY+04.pdf
@@ -213,7 +206,7 @@ akka {
       # This margin is important to be able to survive sudden, occasional,
       # pauses in heartbeat arrivals, due to for example garbage collect or
       # network drop.
-      acceptable-heartbeat-pause = 4 s
+      acceptable-heartbeat-pause = 10 s
 
 
       # How often to check for nodes marked as unreachable by the failure
@@ -231,35 +224,20 @@ akka {
     # address as failed. This configuration option controls how much time should
     # be elapsed before reattempting a new connection. While the address is
     # gated, all messages sent to the address are delivered to dead-letters.
-    # If this setting is 0, the remoting will always immediately reattempt
-    # to establish a failed outbound connection and will buffer writes until
-    # it succeeds.
-    retry-gate-closed-for = 0 s
+    # Since this setting limits the rate of reconnects setting it to a
+    # very short interval (i.e. less than a second) may result in a storm of
+    # reconnect attempts.
+    retry-gate-closed-for = 5 s
 
-    # If the retry gate function is disabled (see retry-gate-closed-for) the
-    # remoting subsystem will always attempt to reestablish failed outbound
-    # connections. The settings below together control the maximum number of
-    # reattempts in a given time window. The number of reattempts during
-    # a window of "retry-window" will be maximum "maximum-retries-in-window".
-    retry-window = 60 s
-    maximum-retries-in-window = 3
-
-    # The length of time to gate an address whose name lookup has failed
-    # or has explicitly signalled that it will not accept connections
-    # (remote system is shutting down or the requesting system is quarantined).
-    # No connection attempts will be made to an address while it remains
-    # gated. Any messages sent to a gated address will be directed to dead
-    # letters instead. Name lookups are costly, and the time to recovery
-    # is typically large, therefore this setting should be a value in the
-    # order of seconds or minutes.
-    gate-invalid-addresses-for = 60 s
-
-    # This settings controls how long a system will be quarantined after
-    # catastrophic communication failures that result in the loss of system
-    # messages. Quarantining prevents communication with the remote system
-    # of a given UID. This function can be disabled by setting the value
-    # to "off".
-    quarantine-systems-for = 60s
+    # After catastrophic communication failures that result in the loss of system
+    # messages or after the remote DeathWatch triggers the remote system gets
+    # quarantined to prevent inconsistent behavior.
+    # This setting controls how long the Quarantine marker will be kept around
+    # before being removed to avoid long-term memory leaks.
+    # WARNING: DO NOT change this to a small value to re-enable communication with
+    # quarantined nodes. Such feature is not supported and any behavior between
+    # the affected systems after lifting the quarantine is undefined.
+    prune-quarantine-marker-after = 5 d
 
     # This setting defines the maximum number of unacknowledged system messages
     # allowed for a remote system. If this limit is reached the remote system is
@@ -272,13 +250,22 @@ akka {
     # piggybacked on ordinary traffic messages. If no traffic is detected
     # during the time period configured here, the remoting will send out
     # an individual ack.
-    system-message-ack-piggyback-timeout = 1 s
+    system-message-ack-piggyback-timeout = 0.3 s
 
-    # This setting defines the time after messages that have not been
+    # This setting defines the time after internal management signals
+    # between actors (used for DeathWatch and supervision) that have not been
     # explicitly acknowledged or negatively acknowledged are resent.
     # Messages that were negatively acknowledged are always immediately
     # resent.
-    resend-interval = 1 s
+    resend-interval = 2 s
+
+    # WARNING: this setting should not be not changed unless all of its consequences
+    # are properly understood which assumes experience with remoting internals
+    # or expert advice.
+    # This setting defines the time after redelivery attempts of internal management
+    # signals are stopped to a remote system that has been not confirmed to be alive by
+    # this system before.
+    initial-system-message-delivery-timeout = 3 m
 
     ### Transports and adapters
 
@@ -475,6 +462,36 @@ akka {
       }
     }
 
+    ### Default configuration for the failure injector transport adapter
+
+    gremlin {
+      # Enable debug logging of the failure injector transport adapter
+      debug = off
+    }
+
+    ### Default dispatcher for the remoting subsystem
+
+    default-remote-dispatcher {
+      type = Dispatcher
+      executor = "fork-join-executor"
+      fork-join-executor {
+        # Min number of threads to cap factor-based parallelism number to
+        parallelism-min = 2
+        parallelism-max = 2
+      }
+    }
+    
+    backoff-remote-dispatcher {
+      type = Dispatcher
+      executor = "fork-join-executor"
+      fork-join-executor {
+        # Min number of threads to cap factor-based parallelism number to
+        parallelism-min = 2
+        parallelism-max = 2
+      }
+    }
+
+
   }
 
 }
@@ -488,7 +505,7 @@ akka {
 
 akka {
   # Akka version, checked against the runtime version of Akka.
-  version = "2.2.3"
+  version = "2.3.4"
 
   # Home directory of Akka, modules in the deploy directory will be loaded
   home = ""
@@ -497,23 +514,18 @@ akka {
   # to STDOUT)
   loggers = ["akka.event.Logging$DefaultLogger"]
 
-  # Deprecated, use akka.loggers.
-  event-handlers = []
-
   # Loggers are created and registered synchronously during ActorSystem
   # start-up, and since they are actors, this timeout is used to bound the
   # waiting time
   logger-startup-timeout = 5s
-
-  # Deprecated, use akka.logger-startup-timeout
-  event-handler-startup-timeout = -1s
 
   # Log level used by the configured loggers (see "loggers") as soon
   # as they have been started; before that, see "stdout-loglevel"
   # Options: OFF, ERROR, WARNING, INFO, DEBUG
   loglevel = "INFO"
 
-  # Log level for the very basic logger activated during AkkaApplication startup
+  # Log level for the very basic logger activated during ActorSystem startup.
+  # This logger prints the log messages to stdout (System.out).
   # Options: OFF, ERROR, WARNING, INFO, DEBUG
   stdout-loglevel = "WARNING"
 
@@ -581,12 +593,29 @@ akka {
       # Default timeout for typed actor methods with non-void return type
       timeout = 5s
     }
+    
+    # Mapping between ´deployment.router' short names to fully qualified class names
+    router.type-mapping {
+      from-code = "akka.routing.NoRouter"
+      round-robin-pool = "akka.routing.RoundRobinPool"
+      round-robin-group = "akka.routing.RoundRobinGroup"
+      random-pool = "akka.routing.RandomPool"
+      random-group = "akka.routing.RandomGroup"
+      balancing-pool = "akka.routing.BalancingPool"
+      smallest-mailbox-pool = "akka.routing.SmallestMailboxPool"
+      broadcast-pool = "akka.routing.BroadcastPool"
+      broadcast-group = "akka.routing.BroadcastGroup"
+      scatter-gather-pool = "akka.routing.ScatterGatherFirstCompletedPool"
+      scatter-gather-group = "akka.routing.ScatterGatherFirstCompletedGroup"
+      consistent-hashing-pool = "akka.routing.ConsistentHashingPool"
+      consistent-hashing-group = "akka.routing.ConsistentHashingGroup"
+    }
 
     deployment {
 
       # deployment id pattern - on the format: /parent/child etc.
       default {
-
+      
         # The id of the dispatcher to use for this actor.
         # If undefined or empty the dispatcher specified in code
         # (Props.withDispatcher) is used, or default-dispatcher if not
@@ -607,7 +636,7 @@ akka {
         # - or:        Fully qualified class name of the router class.
         #              The class must extend akka.routing.CustomRouterConfig and
         #              have a public constructor with com.typesafe.config.Config
-        #              parameter.
+        #              and optional akka.actor.DynamicAccess parameter.
         # - default is "from-code";
         # Whether or not an actor is transformed to a Router is decided in code
         # only (Props.withRouter). The type of router can be overridden in the
@@ -616,8 +645,8 @@ akka {
         # In case of routing, the actors to be routed to can be specified
         # in several ways:
         # - nr-of-instances: will create that many children
-        # - routees.paths: will look the paths up using actorFor and route to
-        #   them, i.e. will not create children
+        # - routees.paths: will route messages to these paths using ActorSelection,
+        #   i.e. will not create children
         # - resizer: dynamically resizable number of routees as specified in
         #   resizer below
         router = "from-code"
@@ -638,10 +667,21 @@ akka {
           # precedence over nr-of-instances
           paths = []
         }
+        
+        # To use a dedicated dispatcher for the routees of the pool you can
+        # define the dispatcher configuration inline with the property name 
+        # 'pool-dispatcher' in the deployment section of the router.
+        # For example:
+        # pool-dispatcher {
+        #   fork-join-executor.parallelism-min = 5
+        #   fork-join-executor.parallelism-max = 5
+        # }
 
         # Routers with dynamically resizable number of routees; this feature is
         # enabled by including (parts of) this section in the deployment
         resizer {
+        
+          enabled = off
 
           # The fewest number of routees the router should ever have.
           lower-bound = 1
@@ -679,13 +719,6 @@ akka {
           # capacity is 9 it will request an decrease of 1 routee.
           backoff-rate = 0.1
 
-          # When the resizer reduce the capacity the abandoned routee actors are
-          # stopped with PoisonPill after this delay. The reason for the delay is
-          # to give concurrent messages a chance to be placed in mailbox before
-          # sending PoisonPill.
-          # Use 0s to skip delay.
-          stop-delay = 1s
-
           # Number of messages between resize operation.
           # Use 1 to resize before each message.
           messages-per-resize = 10
@@ -695,20 +728,32 @@ akka {
 
     default-dispatcher {
       # Must be one of the following
-      # Dispatcher, (BalancingDispatcher, only valid when all actors using it are
-      # of the same type), PinnedDispatcher, or a FQCN to a class inheriting
+      # Dispatcher, PinnedDispatcher, or a FQCN to a class inheriting
       # MessageDispatcherConfigurator with a public constructor with
       # both com.typesafe.config.Config parameter and
       # akka.dispatch.DispatcherPrerequisites parameters.
-      # PinnedDispatcher must be used toghether with executor=thread-pool-executor.
+      # PinnedDispatcher must be used together with executor=thread-pool-executor.
       type = "Dispatcher"
 
       # Which kind of ExecutorService to use for this dispatcher
       # Valid options:
+      #  - "default-executor" requires a "default-executor" section
       #  - "fork-join-executor" requires a "fork-join-executor" section
       #  - "thread-pool-executor" requires a "thread-pool-executor" section
       #  - A FQCN of a class extending ExecutorServiceConfigurator
-      executor = "fork-join-executor"
+      executor = "default-executor"
+
+      # This will be used if you have set "executor = "default-executor"".
+      # If an ActorSystem is created with a given ExecutionContext, this
+      # ExecutionContext will be used as the default executor for all
+      # dispatchers in the ActorSystem configured with
+      # executor = "default-executor". Note that "default-executor"
+      # is the default value for executor, and therefore used if not
+      # specified otherwise. If no ExecutionContext is given,
+      # the executor configured in "fallback" will be used.
+      default-executor {
+        fallback = "fork-join-executor"
+      }
 
       # This will be used if you have set "executor = "fork-join-executor""
       fork-join-executor {
@@ -939,9 +984,7 @@ akka {
     ticks-per-wheel = 512
 
     # This setting selects the timer implementation which shall be loaded at
-    # system start-up. Built-in choices are:
-    #  - akka.actor.LightArrayRevolverScheduler
-    #  - akka.actor.DefaultScheduler (HWT) DEPRECATED
+    # system start-up.
     # The class given here must implement the akka.actor.Scheduler interface
     # and offer a public constructor which takes three arguments:
     #  1) com.typesafe.config.Config
@@ -1164,25 +1207,8 @@ akka {
       management-dispatcher = "akka.actor.default-dispatcher"
     }
 
-
-    # IMPORTANT NOTICE:
-    #
-    # The following settings belong to the deprecated akka.actor.IO
-    # implementation and will be removed once that is removed. They are not
-    # taken into account by the akka.io.* implementation, which is configured
-    # above!
-
-    # In bytes, the size of the shared read buffer. In the span 0b..2GiB.
-    #
-    read-buffer-size = 8KiB
-
-    # Specifies how many ops are done between every descriptor selection
-    select-interval = 100
-
-    # Number of connections that are allowed in the backlog.
-    # 0 or negative means that the platform default will be used.
-    default-backlog = 1000
   }
 
 
 }
+
